[package]
name = "cyclist"
version = "0.1.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A generic Rust implementation of the Cyclist mode of permutation-based cryptography (e.g. Xoodyak)."
homepage = "https://github.com/codahale/cyclist"
documentation = "https://docs.rs/cyclist/"
keywords = ["crypto", "cyclist", "xoodyak", "duplex", "no-std"]
categories = ["cryptography", "no-std"]
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[features]
default = ["std", "keccyak", "xoodyak"]
std = ["byteorder/std", "subtle/std", "zeroize/std"]
keccyak = ["keccak-p"]
xoodyak = ["xoodoo-p"]

[dependencies]
byteorder = "1.4.3"
keccak-p = { version = "0.1.0", optional = true }
subtle = { version = "2.4.1", default-features = false }
xoodoo-p = { version = "0.1.0", optional = true }
zeroize = { version = "1.5.5", default-features = false }

[dev-dependencies]
aead = "0.4.3"
aes-gcm = "0.9.4"
chacha20poly1305 = "0.10.0-pre"
criterion = { version = "0.3.5", features = ["html_reports"] }
sha2 = "0.10.2"
sha3 = "0.10.1"
strobe-rs = "0.7.1"

[[bench]]
name = "benchmarks"
harness = false
