[package]
name = "cyclist"
version = "0.3.3"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A generic Rust implementation of the Cyclist mode of permutation-based cryptography (e.g. Xoodyak)."
homepage = "https://github.com/codahale/cyclist"
documentation = "https://docs.rs/cyclist/"
keywords = ["crypto", "cyclist", "xoodyak", "duplex", "no-std"]
categories = ["cryptography", "no-std"]
readme = "README.md"
include = ["src/**/*", "benches/**/*", "LICENSE", "README.md"]

[features]
default = ["std", "keccyak", "xoodyak"]
std = ["byteorder/std"]
keccyak = ["keccak-p"]
xoodyak = ["xoodoo-p"]

[dependencies]
byteorder = "1.4.3"
constant_time_eq = "0.2.4"
keccak-p = { version = "0.1.0", optional = true }
xoodoo-p = { version = "0.1.0", optional = true }

[dev-dependencies]
aead = "0.5.1"
aes-gcm = "0.10.1"
blake3 = "1.3.1"
chacha20poly1305 = "0.10.1"
criterion = { version = "0.3.6", features = ["html_reports"] }
keccak = "0.1.2"
sha2 = "0.10.3"
sha3 = "0.10.2"
strobe-rs = "0.7.1"

[[bench]]
name = "benchmarks"
harness = false
